--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
 </head>
 <body>
 	<div class='container1'>
-		<img src="C:\Users\sridh\Downloads\cloud.png"  class = "cloud1">
+		<img src="image\cloud.png"  class = "cloud1">
 		<div class='name'>
 			<h1> I'm JeyaSing Daniel </h1>
 			<h2>a <span class="pro">pro</span>grammer.</h2>
 		</div>
 		<div>
-			<img src="C:\Users\sridh\Downloads\cloud.png"  class = "cloud2">
+			<img src="image\cloud.png"  class = "cloud2">
 		</div>
 		<div>
-			<img src="C:\Users\sridh\Downloads\mountain.png"  class = "mountain">
+			<img src="image\mountain.png"  class = "mountain">
 		</div>
 	</div>
 	<div class='container2'>
-			<img src="C:\Users\sridh\Downloads\JSDpic.jpg"  class = "JSDimage">
+			<img src="image\JSDpic.jpg"  class = "JSDimage">
 			<div class="c2d2">
 				<h2 class='t1'> Hello </h2>
 				<p class='t2'>I am an Fresher and pursing about Web Developement. I ❤️ to learn new things .</p>
@@ -28,7 +28,7 @@
 	<div class='c2d3'>
 		<h2 class='t3'>My Skills</h2>
 		<div class='p1'>
-			<img src="C:\Users\sridh\Downloads\cat-typing.gif">
+			<img src="image\cat-typing.gif">
 			<div>
 				<h3>&nbsp;Design & Developement <br></h3>
 				<p class='t4'>&nbsp;I started learning to code when I was 21 years old because<br>&nbsp; I wanted to make my own Project.</p>
@@ -36,7 +36,7 @@
 		</div>
 		<div class='p2'>
 			<div class='aa'>
-				<img src="C:\Users\sridh\Downloads\chilly.png" class='png'>
+				<img src="image\chilly.png" class='png'>
 			</div>
 			<div class='bb'>
 				<h3>&nbsp;Hot Wings Challenge<br></h3>
