--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<a href="https://www.facebook.com/daniel.rj.1042?mibextid=ZbWKwL" style= "text-align:center;">Facebook</a>
 			<a href="https://instagram.com/instand__charger__?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D" style= "text-align:left;">Instagram</a>
 		</div>
-		<p class='t5'>© Angela Yu @ The App Brewery.</p>
+		<p class='t5'>© JeyaSing Daniel @ The App Brewery.</p>
 	</div>
 </body>
 </html>
